--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ vaadin.allowed-packages = com.vaadin.org.vaadin,com.example.application
 spring.jpa.defer-datasource-initialization = true
 spring.sql.init.mode = always
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
