--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.defer-datasource-initialization = true
 spring.sql.init.mode = always
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:h2:file:./data/dev-db
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
